# RICE_ANALYZER_FLASK

./: .gitignore  README.md  TASK_DONE_UPTO_NOW.md  app.py  cam.json  data.json  extracting_frames copy.py  extracting_frames.py  grain_writer.py  image_each_grain.py  requirements.txt  rice_counter_frames copy.py  rice_counter_frames.py  shared_counts.json
rice_interface/: next.config.ts  package-lock.json  package.json
rice_interface/config/: raspberry-pi.json
rice_interface/src/app/: globals.css  page.module.css  page.tsx
rice_interface/src/app/api/camera/: route.ts
rice_interface/src/app/api/data/: route.ts
rice_interface/src/app/api/ping/: route.ts
static/css/: style.css
static/js/: main.js
templates/: index.html
worker/: classifier.py  constants.py  data_io.py  grain_counter.py  main.py  network.py  processor.py  pyproject.toml  stream.py  utils.py
