[project]
name = "worker"
version = "0.1.0"
description = "Rice grain counting and classification worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scipy>=1.10.0",
]
